<resources>
    <string name="app_name">RunApp</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="usuario">Usuario</string>
    <string name="usuarioNom">Nombre de Usuario</string>
    <string name="correo">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena2">Confirmar Contraseña</string>
    <string name="siguiente">Siguiente</string>
    <string name="title_activity_registro_pass">Registropass</string>
    <string name="datosPer">Datos Personales</string>
    <string name="sesion">Inicio de Sesión</string>
    <string name="edad">Edad</string>
    <string name="peso">Peso (kg)</string>
    <string name="estatura">Estatura (m)</string>
    <string name="anterior">Anterior</string>
    <string name="title_activity_inicio">Inicio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapa_recorrido">Map</string>
    <string name="title_activity_ver_recorridos">Volver al Inicio</string>
    <string name="title_activity_cambiar_datos">Volver al Inicio</string>
    <string name="title_activity_incio_drawer">incioDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Volver al Inicio</string>
    <string name="title_activity_tips2">Volver al Inicio</string>
    <string name="title_activity_tips3">Volver al Inicio</string>
    <string name="title_activity_ver_mis_datos">verMisDatos</string>
    <string name="title_activity_selfies">selfies</string>
    <string name="title_activity_acerca_de">Volver al Inicio</string>
</resources>
