<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.runapp.runapp.ActividadMain"
    android:background="@drawable/fitness">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnSiguiente"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtDatosPer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nombre"
            android:id="@+id/txtPass1"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/txtApellido"
            android:layout_marginTop="44dp"
            android:textColor="#0014f1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editNombre"
            android:layout_below="@+id/txtPass1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/nombre"
            android:backgroundTint="#000000"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/apellido"
            android:id="@+id/txtApellido"
            android:layout_marginTop="24dp"
            android:textColor="#0014f1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editApellido"
            android:hint="@string/apellido"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtApellido"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/usuarioNom"
            android:id="@+id/usuario"
            android:layout_below="@+id/editApellido"
            android:layout_alignStart="@+id/txtPass1"
            android:layout_marginTop="22dp"
            android:textColor="#0014f1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editUser"
            android:hint="@string/usuario"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/usuario"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textColor="#000000"
            android:backgroundTint="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/correo"
            android:id="@+id/txtCorreo"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/editUser"
            android:layout_alignStart="@+id/usuario"
            android:textColor="#0014f1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editCorreo"
            android:hint="@string/correo"
            android:textStyle="bold"
            android:textColor="#000000"
            android:backgroundTint="#000000" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/datosPer"
        android:id="@+id/txtDatosPer"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold|italic"
        android:editable="false"
        android:textColor="#000000" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSiguiente"
        android:text="@string/siguiente"
        android:background="@drawable/roundbtn"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:clickable="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
