<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.runapp.runapp.CambiarDatos">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/txtFitness"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/edad"
            android:id="@+id/txtEdad"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/txtPeso"
            android:layout_marginTop="44dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editEdad"
            android:hint="@string/edad" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/peso"
            android:id="@+id/txtPeso"
            android:layout_marginTop="24dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editPeso"
            android:hint="@string/peso"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtPeso"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/estatura"
            android:id="@+id/txtEstatura"
            android:layout_below="@+id/editPeso"
            android:layout_alignStart="@+id/txtEdad"
            android:layout_marginTop="22dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editEstatura"
            android:hint="@string/estatura"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtEstatura"
            android:layout_alignParentEnd="true" />

    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGuarda"
        android:text="Guardar Cambios"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:clickable="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Fitness"
        android:id="@+id/txtFitness"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold|italic" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancelar"
        android:text="Cancelar"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:clickable="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
